fixed some spacing and changed e bio

--- a/style.css
+++ b/style.css
@@ -241,6 +241,7 @@ html, body {
 
   .buzzPlayer {
     margin: 10% auto;
+    
   }
 
 
@@ -310,7 +311,7 @@ html, body {
 
   .letsTalk {
     font-size: 5vw;
-    margin: 3% auto;
+    margin: 3% auto 3% 2%;
     text-align: center;
     font-family: acier-bat-outline, sans-serif;
     color: rgb(240, 232, 215);
@@ -333,6 +334,7 @@ html, body {
     /* margin: 0 auto; */
     align-content: center;
     text-align: center;
+    border-radius: 30px;
 
   }
 
@@ -589,6 +591,13 @@ html, body {
     display: none;
   }
 
+
+
+  .buzzPlayer {
+    margin: 10% 3%;
+    
+  }
+
   .linkCity {
     text-align: center;
     align-content: center;
@@ -650,7 +659,7 @@ html, body {
     width: 100%;
   }
   .podcaster2 {
-    width: 100%;
+    width: 80%;
   }
 
   .letsTalk {
